--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,10 +12,17 @@ packages = [
 [[tool.poetry.source]]
 name = "testpypi"
 url = "https://test.pypi.org/legacy/"
-priority = 'primary'
+priority = "primary"
+
+
+[[tool.poetry.source]]
+name = "PyPI"
+priority = "primary"
 
 [tool.poetry.dependencies]
 python = "^3.12"
+authlib = "^1.3.2"
+pytest = "^8.3.2"
 
 [build-system]
 requires = ["poetry-core"]
