Enhance `test_find_party_index` and update dependencies
- Expanded `test_find_party_index` to include additional test cases for various scenarios.
- Added new dependencies: `uuid6`, `requests`, and `pydash` in `pyproject.toml`.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,9 @@ priority = "primary"
 python = "^3.12"
 authlib = "^1.3.2"
 pytest = "^8.3.2"
+uuid6 = "^2024.7.10"
+requests = "^2.32.3"
+pydash = "^8.0.3"
 
 [build-system]
 requires = ["poetry-core"]
