Add future annotations, update datetime import, and adjust dependencies
- Added `from __future__ import annotations` for forward compatibility.
- Replaced `UTC` with `timezone.utc` in datetime import.
- Updated `python` version dependency in `pyproject.toml` to `^3.8`.
- Added `pytest-cov` as a dependency in `pyproject.toml`.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,12 +20,13 @@ name = "PyPI"
 priority = "primary"
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "^3.8"
 authlib = "^1.3.2"
 pytest = "^8.3.2"
 uuid6 = "^2024.7.10"
 requests = "^2.32.3"
 pydash = "^8.0.3"
+pytest-cov = "^5.0.0"
 
 [build-system]
 requires = ["poetry-core"]
