--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ uuid6 = "^2024.7.10"
 requests = "^2.32.3"
 pydash = "^8.0.3"
 pytest-cov = "^5.0.0"
+pytest-mock = "^3.14.0"
 
 [build-system]
 requires = ["poetry-core"]
