--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "vcon"
-version = "0.3.1"
+version = "0.3.3"
 description = "The vCon library"
-authors = ["pair <dev_team@strolid.com>"]
+authors = ["ghostofbasho@gmail.com"]
 license = "MIT"
 readme = "README.md"
 packages = [
