--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "vcon"
-version = "0.3.3"
+version = "0.3.4"
 description = "The vCon library"
-authors = ["ghostofbasho@gmail.com"]
+authors = ["Thomas McCarthy-Howe <ghostofbasho@gmail.com>"]
 license = "MIT"
 readme = "README.md"
 packages = [
