--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ requests = "^2.32.3"
 pydash = "^8.0.3"
 pytest-cov = "^5.0.0"
 pytest-mock = "^3.14.0"
+python-dateutil = "^2.9.0.post0"
 
 [build-system]
 requires = ["poetry-core"]
