--- a/environment.yml
+++ b/environment.yml
@@ -4,7 +4,8 @@ channels:
   - defaults
 dependencies:
   - python=3.9
-  - pip
+  - pip:
+    - -r requirements.txt
   - requests
   - cryptography
   - authlib
